<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.actemium</groupId>
  <artifactId>Marshalling</artifactId>
  <version>1.0.9.d</version>
  <packaging>jar</packaging>

  <name>Marshalling</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.version>1.7.5</slf4j.version>
  </properties>
  
  
 <distributionManagement>
     <repository>
     <id>actemium_nexus_release</id>
     <name>Internal Releases</name>
     <url>http://46.105.48.117:8081/nexus/content/repositories/releases/</url>
  </repository>
  <snapshotRepository>
     <id>actemium_nexus_snapshot</id>
     <name>Internal Releases</name>
     <url>http://46.105.48.117:8081/nexus/content/repositories/snapshots/</url>
  </snapshotRepository>
             
 </distributionManagement>

   <build>
    <plugins>
   
	<!-- Make this jar executable -->
		<plugin>
        	<groupId>org.apache.maven.plugins</groupId>
        	<artifactId>maven-compiler-plugin</artifactId>
        	<version>3.7.0</version>
            <configuration>
                <source>11</source>
                <target>11</target>
                <showWarnings>true</showWarnings>
        		<showDeprecation>true</showDeprecation>
            </configuration>
   		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>3.2.5</version>
		</plugin>
    </plugins>
  </build>
  

  <dependencies>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>${slf4j.version}</version>
	</dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-log4j12</artifactId>
		<version>${slf4j.version}</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter</artifactId>
		<version>5.10.2</version>
		<scope>test</scope>
	</dependency>
  </dependencies>
</project>
